Fix account page clipping under fixed navbar

--- a/src/app/account/layout.module.css
+++ b/src/app/account/layout.module.css
@@ -3,6 +3,7 @@
   background: #0d0d0f;
   display: flex;
   flex-direction: column;
+  padding-top: 78px; /* offset fixed navbar */
 }
 
 .wrapper {
@@ -10,7 +11,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  padding: 96px 20px 48px;
+  padding: 32px 20px 48px;
 }
 
 .panel {
